# sphinx-preview

./: .gitignore  README.md  README.rst  pyproject.toml
docs/: changelog.rst  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/examples/: needs.rst
sphinx_preview/: __init__.py  sphinx_preview.py
sphinx_preview/assets/: sphinx_preview.css  template_sphinx_preview.js
test/: index.html  my.css  my.js
